--- a/package.json
+++ b/package.json
@@ -2,22 +2,28 @@
   "name": "back-end",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "dependencies": {
     "bcrypt": "^4.0.1",
     "cors": "^2.8.5",
     "cross-env": "^7.0.2",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^3.22.0",
+    "jest": "^26.0.1",
     "jsonschema": "^1.2.6",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.1",
+    "knex-cleaner": "^1.3.0",
     "nodemon": "^2.0.4",
     "pg": "^8.2.1",
-    "sqlite3": "^4.2.0"
+    "sqlite3": "^4.2.0",
+    "supertest": "^4.0.2"
   },
   "devDependencies": {},
   "scripts": {
+    "start": "node start server.js",
+    "start:dev": "nodemon -r dotenv/config server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
