--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "cross-env": "^7.0.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-winston": "^4.0.3",
     "helmet": "^3.22.0",
     "jest": "^26.0.1",
     "jsonschema": "^1.2.6",
@@ -22,8 +23,8 @@
   },
   "devDependencies": {},
   "scripts": {
-    "start": "node start server.js",
-    "start:dev": "nodemon -r dotenv/config server.js",
+    "start": "node cross-env NODE_ENV=production start server.js",
+    "start:dev": "cross-env NODE_ENV=development nodemon -r dotenv/config server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
