--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.1",
     "knex-cleaner": "^1.3.0",
+    "mail-sender": "git+https://github.com/danielkanangila/mail-sender.git#master",
     "nodemon": "^2.0.4",
     "pg": "^8.2.1",
     "sqlite3": "^4.2.0",
@@ -25,7 +26,7 @@
   "scripts": {
     "start": "node cross-env NODE_ENV=production start server.js",
     "start:dev": "cross-env NODE_ENV=development nodemon -r dotenv/config server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
