--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
   "scripts": {
     "start": "node cross-env NODE_ENV=production start server.js",
     "start:dev": "cross-env NODE_ENV=development nodemon -r dotenv/config server.js",
-    "test": "jest"
+    "test": "cross-env NODE_ENV=test npm run migrate && npm run seed && jest --runInBand",
+    "test:watch": "cross-env NODE_ENV=test npm run migrate && npm run seed && jest --watchAll --verbose --runInBand",
+    "migrate": "knex migrate:latest",
+    "seed": "knex seed:run"
   },
   "repository": {
     "type": "git",
