--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "scripts": {
     "start": "node cross-env NODE_ENV=production start server.js",
     "start:dev": "cross-env NODE_ENV=development nodemon -r dotenv/config server.js",
-    "test": "cross-env NODE_ENV=test npm run migrate && npm run seed && jest --runInBand --detectOpenHandles",
+    "test": "cross-env NODE_ENV=test npm run migrate && npm run seed && jest --runInBand --detectOpenHandles --forceExit",
     "test:watch": "cross-env NODE_ENV=test npm run migrate && npm run seed && jest --watchAll --verbose --runInBand",
     "migrate": "knex migrate:latest",
     "seed": "knex seed:run"
