--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   },
   "scripts": {
     "prestart": "npm run migrate && npm run seed",
-    "start": "node cross-env NODE_ENV=production start server.js",
+    "start": "node start server.js",
     "start:dev": "cross-env NODE_ENV=development nodemon -r dotenv/config server.js",
     "test": "cross-env NODE_ENV=test npm run migrate && npm run seed && jest --runInBand --detectOpenHandles --forceExit",
     "test:watch": "cross-env NODE_ENV=test npm run migrate && npm run seed && jest --watchAll --verbose --runInBand",
