--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "prestart": "npm run migrate && npm run seed",
     "start": "node server.js",
     "start:dev": "cross-env NODE_ENV=development nodemon -r dotenv/config server.js",
-    "test": "cross-env NODE_ENV=test npm run migrate && npm run seed && jest --runInBand --detectOpenHandles --forceExit",
-    "test:watch": "cross-env NODE_ENV=test npm run migrate && npm run seed && jest --watchAll --verbose --runInBand",
+    "test": "cross-env NODE_ENV=test npm run migrate && cross-env NODE_ENV=test npm run seed && jest --runInBand --detectOpenHandles --forceExit",
+    "test:watch": "cross-env NODE_ENV=test npm run migrate && cross-env NODE_ENV=test npm run seed && jest --watchAll --verbose --runInBand",
     "migrate": "knex migrate:latest",
     "seed": "knex seed:run"
   },
